--- a/.travis.yml
+++ b/.travis.yml
@@ -18,43 +18,42 @@ env:
 matrix:
     include:
 
-        # Do a coverage test in Python 2
-        - python: 2.7
-          env:  SETUP_CMD='test --coverage' OPTIONAL_DEPS=true
+        # # Do a coverage test in Python 2
+        # - python: 2.7
+        #   env:  SETUP_CMD='test --coverage' OPTIONAL_DEPS=true
 
-        # Check for sphinx doc build warnings - we do this first because it
-        # runs for a long time
-        - python: 2.7
-          env: SETUP_CMD='build_sphinx -w'  OPTIONAL_DEPS=true
-          # OPTIONAL_DEPS needed because the plot_directive in sphinx needs them
+        # # Check for sphinx doc build warnings - we do this first because it
+        # # runs for a long time
+        # - python: 2.7
+        #   env: SETUP_CMD='build_sphinx -w'  OPTIONAL_DEPS=true
+        #   # OPTIONAL_DEPS needed because the plot_directive in sphinx needs them
 
         # Try all python versions with the latest numpy
         - python: 2.6
           env: SETUP_CMD='test'
         - python: 2.7
-          env: SETUP_CMD='test'
-        - python: 3.2
-          env: SETUP_CMD='test'
-        - python: 3.3
-          env: SETUP_CMD='test'
-        - python: 3.4
-          env: SETUP_CMD='test'
+        # - python: 3.2
+        #   env: SETUP_CMD='test'
+        # - python: 3.3
+        #   env: SETUP_CMD='test'
+        # - python: 3.4
+        #   env: SETUP_CMD='test'
 
-        # Now try do scipy on 2.7 and an appropriate 3.x build (with latest numpy)
-        - python: 2.7
-          env: SETUP_CMD='test'  OPTIONAL_DEPS=true LC_CTYPE=C.ascii
-        - python: 3.3
-          env: SETUP_CMD='test'  OPTIONAL_DEPS=true LC_CTYPE=C.ascii
+        # # Now try do scipy on 2.7 and an appropriate 3.x build (with latest numpy)
+        # - python: 2.7
+        #   env: SETUP_CMD='test'  OPTIONAL_DEPS=true LC_CTYPE=C.ascii
+        # - python: 3.3
+        #   env: SETUP_CMD='test'  OPTIONAL_DEPS=true LC_CTYPE=C.ascii
 
-        # Try older numpy versions
-        - python: 3.2
-          env: NUMPY_VERSION=1.6 SETUP_CMD='test'
-        - python: 2.7
-          env: NUMPY_VERSION=1.7 SETUP_CMD='test'
-        - python: 2.7
-          env: NUMPY_VERSION=1.6 SETUP_CMD='test'
-        - python: 2.7
-          env: NUMPY_VERSION=1.5 SETUP_CMD='test'
+        # # Try older numpy versions
+        # - python: 3.2
+        #   env: NUMPY_VERSION=1.6 SETUP_CMD='test'
+        # - python: 2.7
+        #   env: NUMPY_VERSION=1.7 SETUP_CMD='test'
+        # - python: 2.7
+        #   env: NUMPY_VERSION=1.6 SETUP_CMD='test'
+        # - python: 2.7
+        #   env: NUMPY_VERSION=1.5 SETUP_CMD='test'
 
 before_install:
 
